<resources>
    <string name="app_name">TheEnjoyers_ThinkJava</string>
    <string name="desc_rectangle">Background dekorasi</string>
    <string name="logo_description">Logo aplikasi ThinkJava</string>
    <string name="welcome_message">Selamat Datang di ThinkJava!</string>
    <string name="intro_text">Siap uji skill ngoding Java kamu?&#10;Pilih topik, kerjakan kuis, dan taklukkan leaderboard!</string>
    <string name="no_account_text">Belum punya akun?</string>
    <string name="button_masuk">Masuk</string>
    <string name="button_daftar">Daftar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>